<resources>
    <string name="app_name">Stroll Safe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pwdBackButtonText">BACK</string>
    <string name="title_activity_pwd_location_information">activity_pwdLocationInformation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_pwd_signup">PWD Signup</string>
    <string name="geofence_transition_invalid_type">INVALID</string>
    <string name="careGiverSignupTitle">Caregiver Signup</string>
    <string name="phone_number_hint">phone number</string>
    <string name="last_name_hint">Last name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="email_address_hint">email address</string>
    <string name="password_hint">password</string>
    <string name="first_name_hint">First name</string>
    <string name="loginButtonText">Already have an account? Login here!</string>
    <string name="settings">Settings</string>
    <string name="last_name_prefix">Last Name: %s</string>
    <string name="first_name_prefix">First Name: %s</string>
    <string name="device_id_prefix">Device ID: %s</string>
    <string name="email_prefix">Email: %s</string>
    <string name="account_type_prefix">Account Type: %s</string>
    <string name="status_prefix">Status: %s</string>
    <string name="user_id_prefix">User ID: %s</string>
    <string name="newCaregiverLabel">Create Caregiver Account</string>
    <string name="caregiverHomeLabel">Caregiver Home</string>
    <string name="caregiverLoginLabel">Caregiver Login</string>
    <string name="title_activity_maps">Safe Zone Manager</string>
    <string name="pwdListLabel">My Patients</string>
    <string name="loginActivityLabel">Existing User Login</string>
    <string name="location_permission_denied">Stroll Safe requires precise location permissions to enable the \'location tracking\' features. Please try again and grant access to use precise location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Stroll Safe\'.</string>
    <string name="permission_required_toast">Precise location permissions are required for this application to function properly.</string>
    <string name="permission_rationale_location">Access to precise location is required for Stroll Safe to accurately track the location of all patients. Please always allow precise location so that we always keep an eye on things.</string>
</resources>