<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/b13" />

    <TextView
        android:id="@+id/textView"
        android:textColor="#08304E"
        android:fontFamily="@font/calibri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/careGiverSignupTitle"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/caregiverSignupScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/caregiverFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:fontFamily="@font/calibri"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="25dp" />

            <EditText
                android:id="@+id/caregiverLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:fontFamily="@font/calibri"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="25dp" />

            <EditText
                android:id="@+id/caregiverPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:hint="@string/phone_number_hint"
                android:fontFamily="@font/calibri"
                android:inputType="phone" />

            <TextView
                android:id="@+id/caregiverBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:hint="@string/date_of_birth_hint"
                android:fontFamily="@font/calibri"
                android:onClick="showDatePickerDialog" />

            <EditText
                android:id="@+id/caregiverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:hint="Address"
                android:fontFamily="@font/calibri"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/caregiverEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_address_hint"
                android:fontFamily="@font/calibri"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/caregiverPassword"
                android:layout_width="match_parent"
                android:fontFamily="@font/calibri"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:layout_marginTop="15dp"
                android:inputType="textPassword" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/caregiverSignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/buttonshapewhitebg"
        android:textColor="@color/white"
        android:onClick="createUserLoginAndUploadObjectFromFields"
        android:text="Sign Up"
        android:fontFamily="@font/calibri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>